@@ -45,8 +45,8 @@ repository.url = git://github.com/plicease/My-Dist.git
 repository.web = https://github.com/plicease/My-Dist
 
 [InstallGuide]
-[MinimumPerl]
 [ConfirmRelease]
+[MinimumPerl]
 
 [ReadmeAnyFromPod]
 filename = README
